more overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 body {
-	min-width: 100vw;
+	height: 100%;
+	width: 100%;
+	min-width: 100%;
 	min-height: 100vh;
 	display: flex;
 	justify-content: center;
