--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,6 +3,7 @@
 	font-family: 'Montserrat-Black';
 	color: pink;
 	margin: 0;
+    overflow: visible;
    	background-image: linear-gradient(
     	40deg,
         #e65353 16.666%, 
